2024-05-17  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2023-06-28  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add r-universe badge

2023-06-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.5

	* DESCRIPTION (Imports): Require RcppSpdlog 0.0.13 or later
	* DESCRIPTION(Title): Minor edit

2023-06-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* R/wrap.R (log): Define two simple setup aliases 'init()' and 'log'
	requiring only a level and setting a default display name of 'R'
	* man/setup.Rd: Update docs

2023-01-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.4

	* R/wrap.R: Document stopwatch
	* man/setup.Rd: Ditto

2023-01-06  Dirk Eddelbuettel  <edd@debian.org>

	* R/wrap.R (fmt): Small robustification

2022-12-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* R/wrap.R (stopwatch,elapsed): Wrap two stopwatch functions

2022-12-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.3

	* DESCRIPTION (Imports): Update versioned imports on RcppSpdlog,
	(Remotes): Remove RcppSpdlog

2022-12-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date, Remotes): Roll minor version and date;
	add remote for rcppspdlog

	* R/wrap.R (filesetup): Add filesetup method

2022-12-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.2

	* README.md (spdl): More edits

2022-11-29  Dirk Eddelbuettel  <edd@debian.org>

	* README.md (spdlog): Minor edits

2022-11-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* tests/simpleTest.R: Add simple tests for cat() and fmt()
	* tests/simpleTest.Rout.save: Reference output

2022-11-24  Dirk Eddelbuettel  <edd@debian.org>
